--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-winit = "0.24.0"
-glium = "0.29.0"
-imgui = "0.7.0"
-imgui-glium-renderer = "0.7.0"
-imgui-winit-support = "0.7.0"
+iced = "*"
