--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,6 @@
-[package]
-name = "loki-bms"
-version = "0.1.0"
-authors = ["OrbitusII <dlodholm@icloud.com>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-iced = { version = "*", features = ["canvas"]}
+[workspace]
+members = [
+    "client",
+    "server",
+    "common",
+]
