--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,7 +13,9 @@ clap                = "3.0.0-beta.2"
 config              = "0.11.0"
 serde               = "1.0.125"
 serde_derive        = "1.0.125"
-tokio               = { version = "1", features = ["full"] }
+tokio               = { version = "1",      features = ["full"] }
+tokio-util          = { version = "0.6.6",  features = ["codec"] }
+tokio-serde         = { version = "0.8.0",  features = ["bincode"] }
 log                 = "0.4.14"
 env_logger          = "0.8.3"
 futures             = "0.3.14"
